[RAP-3901: fixed quickview layout issue]

--- a/app_storefront/cartridge/scss/default/_product_tiles.scss
+++ b/app_storefront/cartridge/scss/default/_product_tiles.scss
@@ -13,7 +13,9 @@
 			background-color: rgba($citrus, 0.8);
 			color: #fff;
 			display: none;
-			width: 45%;
+			width: 55%;//For IE
+			width: max-content;
+			max-width: 75%;
 			top: 50%;
 			left: 50%;
 			padding: 0.5em;
